# midi-to-noteblock

./: README.md  audio_splitter.py  block.py  main.py  nbt_gen.py  region.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
midi_to_noteblock/: __init__.py  nbt_gen.py  region.py
