[metadata]
name = midi-to-noteblock
description = A CLI to convert midi files into world edit schematic files.
version = 0.0.2
author = Eugene Matsumura
license_files = file: ./LICENSE
long_description = file: ./README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/SushiWaUmai/midi-to-noteblock
platforms = any

[options]
scripts = ./main.py
python_requires = >= 3.8
packages = midi_to_noteblock

[options.entry_points]
console_scripts =
    midi-to-noteblock = main:main
